[project]
name = "clickhouse-native-test"
version = "0.1.0"
description = ""
authors = [
    {name = "Daniel Ezeh"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "clickhouse-driver (>=0.2.10,<0.3.0)",
    "loadenv (>=0.1.1,<0.2.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "clickhouse-cityhash (>=1.0.2.5,<2.0.0.0)",
    "lz4 (>=4.4.4,<5.0.0)",
    "chdb (>=4.1.6,<5.0.0)",
    "clickhouse-connect (>=0.15.1,<0.16.0)",
    "polars (>=1.39.3,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
